# flashlite

./: DEV.md  LICENSE.md  QUICK_START.md  README.md  pyproject.toml
examples/: basic_example.py  multi_agent_chat.py  stag_hunt_game.py
src/flashlite/: __init__.py  _spinner.py  client.py  config.py  types.py
src/flashlite/cache/: __init__.py  base.py  disk.py  memory.py
src/flashlite/conversation/: __init__.py  context.py  manager.py  multi_agent.py
src/flashlite/core/: __init__.py  completion.py  messages.py
src/flashlite/middleware/: __init__.py  base.py  cache.py  logging.py  rate_limit.py  retry.py
src/flashlite/observability/: __init__.py  callbacks.py  inspect_compat.py  logging.py  metrics.py
src/flashlite/structured/: __init__.py  outputs.py  schema.py
src/flashlite/templating/: __init__.py  engine.py  filters.py  registry.py
src/flashlite/tools/: __init__.py  definitions.py  execution.py
tests/: __init__.py  conftest.py  test_cache.py  test_cache_integration.py  test_client.py  test_config.py  test_conversation.py  test_integration.py  test_messages.py  test_middleware.py  test_multi_agent.py  test_observability.py  test_rate_limit_regression.py  test_structured.py  test_templating.py  test_tools.py  test_types.py
